# 4WISMPC-Gazebo

./: Readme.md
car_model/: CMakeLists.txt
fwis_mpc_controller/include/fwis_mpc_controller/: fwismpc.hpp
fwis_mpc_controller/launch/: fwis_mpc_tracking.launch
fwis_mpc_controller/src/: fwis_mpc_controller_node.cpp  fwismpc.cpp
fwis_mpc_controller/test/: mpc_dummy_curve.py  mpc_dummy_data.py  mpc_icr_check.py  test_curve_check.sh  test_curve_icr.sh  test_curve_node.sh  test_mpc.sh  test_mpc_curve.sh
src/car_model/src/: twist_sub.cpp
src/car_model/urdf/: smart.xacro
src/fwis_mpc_controller/: CMakeLists.txt  package.xml
src/fwis_mpc_controller/include/fwis_mpc_controller/: fwismpc.hpp
src/fwis_mpc_controller/launch/: fwis_mpc_tracking.launch
src/fwis_mpc_controller/src/: fwis_mpc_controller_node.cpp  fwismpc.cpp
src/fwis_nonlinear_mpc_controller/: CMakeLists.txt  package.xml
src/fwis_nonlinear_mpc_controller/include/fwis_nonlinear_mpc_controller/: fwis_nonlinear_mpc.hpp
src/fwis_nonlinear_mpc_controller/launch/: fwis_nonlinear_mpc_tracking.launch
src/fwis_nonlinear_mpc_controller/src/: fwis_nonlinear_mpc.cpp  fwis_nonlinear_mpc_controller_node.cpp
src/reference_path_publisher/launch/: car_model_with_ref_path.launch
